# operators

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
cuda/gradient/: sobel_cuda.cu
include/: main.h
include/gradient/: alt_sobel.h  ocv_sobel.h  omp_sobel.h  sobel.h  sobel_cuda.cuh
include/utils/: path_helper.h  sobel_util.h
src/: main.cpp
src/gradient/: alt_sobel.cpp  gradient_operator.h  omp_sobel.cpp  sobel.cpp  sobel.h
src/utils/: path_helper.cpp
